style: fix gap and margin top values

--- a/src/modules/edc-demo/components/policy-view/policy-view.component.scss
+++ b/src/modules/edc-demo/components/policy-view/policy-view.component.scss
@@ -11,10 +11,6 @@
   width: 50%;
 }
 
-#create-button {
-  margin-left: 10px;
-}
-
 mat-paginator {
   display: inline-block;
   background-color: transparent;
@@ -23,4 +19,11 @@ mat-paginator {
 .search-form-field {
   min-width: 200px;
   width: 30%;
+  margin-top: 18px;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
