--- a/src/modules/edc-demo/components/transfer-history/transfer-history-viewer.component.scss
+++ b/src/modules/edc-demo/components/transfer-history/transfer-history-viewer.component.scss
@@ -44,4 +44,9 @@ mat-paginator {
   margin-right: 5px;
 }
 
+.table-header-container{
+  gap: 10px;
+  display: flex;
+  align-items: center;
+}
 
